--- a/src/main/resources/com/example/progettomola/controllergui/user-profile-view.fxml
+++ b/src/main/resources/com/example/progettomola/controllergui/user-profile-view.fxml
@@ -7,10 +7,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.progettomola.controllergui.UserProfileController">
    <children>
-      <Button layoutX="412.0" layoutY="87.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="129.0" text="Crea Richieste" />
-      <Button layoutX="412.0" layoutY="143.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="129.0" text="Vedi Recensioni" />
+      <Button fx:id="btnShow" layoutX="412.0" layoutY="87.0" mnemonicParsing="false" onAction="#handleShow" prefHeight="25.0" prefWidth="129.0" text="Cerca Spettacolo" />
+      <Button fx:id="btnReviews" layoutX="412.0" layoutY="143.0" mnemonicParsing="false" onAction="#handleReviews" prefHeight="25.0" prefWidth="129.0" text="Vedi Recensioni" />
       <Label layoutX="264.0" layoutY="14.0" text="User">
          <font>
             <Font size="36.0" />
@@ -45,7 +45,7 @@
             </Text>
          </children>
       </VBox>
-      <Button layoutX="30.0" layoutY="338.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="129.0" text="Indietro" />
-      <Button layoutX="412.0" layoutY="338.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="129.0" text="Elimina Profilo" />
+      <Button fx:id="btnIndietro" layoutX="30.0" layoutY="338.0" mnemonicParsing="false" onAction="#handleIndietro" prefHeight="25.0" prefWidth="129.0" text="Indietro" />
+      <Button fx:id="btnElimina" layoutX="412.0" layoutY="338.0" mnemonicParsing="false" onAction="#handleElimina" prefHeight="25.0" prefWidth="129.0" text="Elimina Profilo" />
    </children>
 </AnchorPane>
