--- a/src/main/resources/com/example/progettomola/controllergui/user-search-view.fxml
+++ b/src/main/resources/com/example/progettomola/controllergui/user-search-view.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.progettomola.controllergui.UserSearchController">
-   <Label layoutX="239.0" layoutY="23.0" text="Spettacoli">
+   <Label layoutX="264.0" layoutY="20.0" text="Shows">
       <font>
          <Font size="25.0" />
       </font>
@@ -17,9 +17,9 @@
    <Button fx:id="btnCerca" layoutX="506.0" layoutY="79.0" mnemonicParsing="false" onAction="#handleCerca" prefHeight="25.0" prefWidth="69.0" text="Cerca" />
    <TableView fx:id="tabView" layoutX="39.0" layoutY="116.0" prefHeight="200.0" prefWidth="448.0">
       <columns>
-         <TableColumn fx:id="colUtenti" prefWidth="446.6666564941406" text="Utenti" />
+         <TableColumn fx:id="colShows" prefWidth="446.6666564941406" text="Shows" />
       </columns>
    </TableView>
    <TextField fx:id="searchField" layoutX="39.0" layoutY="79.0" prefHeight="25.0" prefWidth="448.0" promptText="Cerca" />
-   <Button fx:id="btnIndietroHome" layoutX="39.0" layoutY="342.0" mnemonicParsing="false" onAction="#handleIndietroLogin" prefHeight="25.0" prefWidth="69.0" text="Indietro" />
+   <Button fx:id="btnIndietro" layoutX="39.0" layoutY="342.0" mnemonicParsing="false" onAction="#handleIndietro" prefHeight="25.0" prefWidth="69.0" text="Indietro" />
 </AnchorPane>
