--- a/src/main/resources/com/example/progettomola/controllergui/artist-profile-view.fxml
+++ b/src/main/resources/com/example/progettomola/controllergui/artist-profile-view.fxml
@@ -7,41 +7,40 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.progettomola.controllergui.ArtistProfileController">
    <children>
-      <Button layoutX="412.0" layoutY="87.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="129.0" text="Controlla Richieste" />
-      <Button layoutX="412.0" layoutY="143.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="129.0" text="Vedi Recensioni" />
+      <Button fx:id="btnSeeRequests" layoutX="412.0" layoutY="87.0" mnemonicParsing="false" onAction="#handleSeeRequests" prefHeight="25.0" prefWidth="129.0" text="Controlla Richieste" />
+      <Button fx:id="btnSeeReviews" layoutX="412.0" layoutY="143.0" mnemonicParsing="false" onAction="#handleSeeReviews" prefHeight="25.0" prefWidth="129.0" text="Vedi Recensioni" />
       <Label layoutX="248.0" layoutY="14.0" text="Artist">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <VBox layoutX="14.0" layoutY="74.0" prefHeight="109.0" prefWidth="371.0">
+      <VBox fx:id="verticalBox" layoutX="14.0" layoutY="74.0" prefHeight="79.0" prefWidth="372.0">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ID :" wrappingWidth="155.47000122070312">
+            <Text fx:id="txtId" strokeType="OUTSIDE" strokeWidth="0.0" text="ID :" wrappingWidth="371.4700012207031">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username :" wrappingWidth="155.47000122070312">
+            <Text fx:id="txtUsername" strokeType="OUTSIDE" strokeWidth="0.0" text="Username :" wrappingWidth="371.469970703125">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password :" wrappingWidth="155.47000122070312">
+            <Text fx:id="txtPassword" strokeType="OUTSIDE" strokeWidth="0.0" text="Password :" wrappingWidth="370.8033752441406">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Tipo : " wrappingWidth="155.47000122070312">
+            <Text fx:id="txtTipo" strokeType="OUTSIDE" strokeWidth="0.0" text="Tipo : " wrappingWidth="370.8033142089844">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
          </children>
       </VBox>
-      <Button layoutX="30.0" layoutY="338.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="129.0" text="Indietro" />
-      <Button layoutX="412.0" layoutY="338.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="129.0" text="Elimina Profilo" />
+      <Button fx:id="btnIndietro" layoutX="30.0" layoutY="338.0" mnemonicParsing="false" onAction="#handleIndietro" prefHeight="25.0" prefWidth="129.0" text="Indietro" />
+      <Button fx:id="btnElimina" layoutX="412.0" layoutY="338.0" mnemonicParsing="false" onAction="#deleteProfile" prefHeight="25.0" prefWidth="129.0" text="Elimina Profilo" />
    </children>
 </AnchorPane>
