--- a/src/main/resources/com/example/progettomola/controllergui/user-profile-view.fxml
+++ b/src/main/resources/com/example/progettomola/controllergui/user-profile-view.fxml
@@ -18,27 +18,27 @@
       </Label>
       <VBox layoutX="14.0" layoutY="87.0" prefHeight="82.0" prefWidth="377.0">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ID :" wrappingWidth="377.4700012207031">
+            <Text fx:id="txtId" strokeType="OUTSIDE" strokeWidth="0.0" text="ID :" wrappingWidth="377.4700012207031">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Nome :" wrappingWidth="377.4700012207031">
+            <Text fx:id="txtNome" strokeType="OUTSIDE" strokeWidth="0.0" text="Nome :" wrappingWidth="377.4700012207031">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Cognome :" wrappingWidth="377.4700012207031">
+            <Text fx:id="txtCognome" strokeType="OUTSIDE" strokeWidth="0.0" text="Cognome :" wrappingWidth="377.4700012207031">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username :" wrappingWidth="377.4700012207031">
+            <Text fx:id="txtUsername" strokeType="OUTSIDE" strokeWidth="0.0" text="Username :" wrappingWidth="377.4700012207031">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password :" wrappingWidth="377.4700012207031">
+            <Text fx:id="txtPassword" strokeType="OUTSIDE" strokeWidth="0.0" text="Password :" wrappingWidth="377.4700012207031">
                <font>
                   <Font size="18.0" />
                </font>
@@ -46,6 +46,6 @@
          </children>
       </VBox>
       <Button fx:id="btnIndietro" layoutX="30.0" layoutY="338.0" mnemonicParsing="false" onAction="#handleIndietro" prefHeight="25.0" prefWidth="129.0" text="Indietro" />
-      <Button fx:id="btnElimina" layoutX="412.0" layoutY="338.0" mnemonicParsing="false" onAction="#handleElimina" prefHeight="25.0" prefWidth="129.0" text="Elimina Profilo" />
+      <Button fx:id="btnElimina" layoutX="412.0" layoutY="338.0" mnemonicParsing="false" onAction="#deleteProfile" prefHeight="25.0" prefWidth="129.0" text="Elimina Profilo" />
    </children>
 </AnchorPane>
