--- a/src/main/resources/com/example/progettomola/controllergui/artist-login-view.fxml
+++ b/src/main/resources/com/example/progettomola/controllergui/artist-login-view.fxml
@@ -8,20 +8,20 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.progettomola.controllergui.ArtistLoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.progettomola.controllergui.ArtistLoginController">
    <children>
-      <Label fx:id="lblusername" layoutX="211.0" layoutY="100.0" text="Username" />
-      <Button fx:id="btnLogin" layoutX="314.0" layoutY="244.0" mnemonicParsing="false" onAction="#handleLogin" text="Login" />
-      <TextField fx:id="usernameField" layoutX="211.0" layoutY="131.0" />
-      <PasswordField fx:id="passwordField" layoutX="211.0" layoutY="200.0" />
-      <Label fx:id="lblpassword" layoutX="211.0" layoutY="169.0" text="Password" />
-      <Button fx:id="btnRegister" layoutX="213.0" layoutY="244.0" mnemonicParsing="false" onAction="#handleRegister" text="Register" />
-      <Label fx:id="lblLogin" layoutX="241.0" layoutY="33.0" text="Artist">
+      <Label fx:id="lblusernameA" layoutX="211.0" layoutY="100.0" text="Username" />
+      <Button fx:id="btnLoginA" layoutX="314.0" layoutY="244.0" mnemonicParsing="false" onAction="#handleLogin" text="Login" />
+      <TextField fx:id="usernameFieldA" layoutX="211.0" layoutY="131.0" />
+      <PasswordField fx:id="passwordFieldA" layoutX="211.0" layoutY="200.0" />
+      <Label fx:id="lblpasswordA" layoutX="211.0" layoutY="169.0" text="Password" />
+      <Button fx:id="btnRegisterA" layoutX="213.0" layoutY="244.0" mnemonicParsing="false" onAction="#handleRegister" text="Register" />
+      <Label fx:id="lblLoginA" layoutX="241.0" layoutY="33.0" text="Artist">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <ComboBox fx:id="combo1" layoutX="397.0" layoutY="47.0" onAction="#select" prefWidth="150.0" />
-      <Button fx:id="btnIndietro" layoutX="70.0" layoutY="309.0" mnemonicParsing="false" onAction="#handleIndietro" text="Indietro" />
+      <ComboBox fx:id="combo1A" layoutX="397.0" layoutY="47.0" onAction="#select" prefWidth="150.0" />
+      <Button fx:id="btnIndietroA" layoutX="70.0" layoutY="309.0" mnemonicParsing="false" onAction="#handleIndietro" text="Indietro" />
    </children>
 </AnchorPane>
