--- a/src/main/resources/com/example/progettomola/controllergui/artist-register-view.fxml
+++ b/src/main/resources/com/example/progettomola/controllergui/artist-register-view.fxml
@@ -9,19 +9,19 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.progettomola.controllergui.ArtistRegisterController">
    <children>
-      <TextField fx:id="usernameField" layoutX="226.0" layoutY="94.0" />
-      <PasswordField fx:id="passwordField" layoutX="226.0" layoutY="153.0" />
-      <TextField fx:id="tipoField" layoutX="226.0" layoutY="206.0" />
-      <Label fx:id="lblUsername" layoutX="226.0" layoutY="77.0" text="Username" />
-      <Label fx:id="lblTipo" layoutX="225.0" layoutY="188.0" text="Tipo" />
-      <Label fx:id="lblPassword" layoutX="227.0" layoutY="135.0" text="Password" />
-      <Button fx:id="btnRegistra" layoutX="208.0" layoutY="299.0" mnemonicParsing="false" onAction="#handleRegisterCSV" prefHeight="25.0" prefWidth="85.0" text="Registra CSV" />
-      <Button fx:id="btnIndietro" layoutX="29.0" layoutY="339.0" mnemonicParsing="false" onAction="#handleIndietro" text="Indietro" />
+      <TextField fx:id="usernameFieldA" layoutX="226.0" layoutY="94.0" />
+      <PasswordField fx:id="passwordFieldA" layoutX="226.0" layoutY="153.0" />
+      <TextField fx:id="tipoFieldA" layoutX="226.0" layoutY="206.0" />
+      <Label fx:id="lblUsernameA" layoutX="226.0" layoutY="77.0" text="Username" />
+      <Label fx:id="lblTipoA" layoutX="225.0" layoutY="188.0" text="Tipo" />
+      <Label fx:id="lblPasswordA" layoutX="227.0" layoutY="135.0" text="Password" />
+      <Button fx:id="btnRegistraA" layoutX="208.0" layoutY="299.0" mnemonicParsing="false" onAction="#handleRegisterCSV" prefHeight="25.0" prefWidth="85.0" text="Registra CSV" />
+      <Button fx:id="btnIndietroA" layoutX="29.0" layoutY="339.0" mnemonicParsing="false" onAction="#handleIndietro" text="Indietro" />
       <Label fx:id="lblRegistrazione" layoutX="226.0" layoutY="22.0" text="Registrazione">
          <font>
             <Font size="25.0" />
          </font>
       </Label>
-      <Button fx:id="btnRegistra1" layoutX="311.0" layoutY="299.0" mnemonicParsing="false" onAction="#handleRegisterDB" prefHeight="25.0" prefWidth="85.0" text="Registra DB" />
+      <Button fx:id="btnRegistra1A" layoutX="311.0" layoutY="299.0" mnemonicParsing="false" onAction="#handleRegisterDB" prefHeight="25.0" prefWidth="85.0" text="Registra DB" />
    </children>
 </AnchorPane>
