--- a/src/main/resources/com/example/progettomola/controllergui/sponsor-profile-view.fxml
+++ b/src/main/resources/com/example/progettomola/controllergui/sponsor-profile-view.fxml
@@ -9,21 +9,21 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.progettomola.controllergui.SponsorProfileController">
    <children>
-      <Button fx:id="btnCreaRichieste" layoutX="412.0" layoutY="87.0" mnemonicParsing="false" onAction="#handleRequests" prefHeight="25.0" prefWidth="129.0" text="Crea Richieste" />
-      <Button fx:id="btnRecensioni" layoutX="412.0" layoutY="143.0" mnemonicParsing="false" onAction="#handleReviews" prefHeight="25.0" prefWidth="129.0" text="Vedi Recensioni" />
+      <Button fx:id="btnCreaRichieste" layoutX="412.0" layoutY="87.0" mnemonicParsing="false" onAction="#handleRequestsS" prefHeight="25.0" prefWidth="129.0" text="Crea Richieste" />
+      <Button fx:id="btnRecensioni" layoutX="412.0" layoutY="143.0" mnemonicParsing="false" onAction="#handleReviewsS" prefHeight="25.0" prefWidth="129.0" text="Vedi Recensioni" />
       <Label layoutX="235.0" layoutY="14.0" text="Sponsor">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <VBox fx:id="verticalBox" layoutX="14.0" layoutY="87.0" prefHeight="53.0" prefWidth="379.0">
+      <VBox fx:id="verticalBoxS" layoutX="14.0" layoutY="87.0" prefHeight="53.0" prefWidth="379.0">
          <children>
             <Text fx:id="txtId" strokeType="OUTSIDE" strokeWidth="0.0" text="ID :" wrappingWidth="378.1366882324219">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
-            <Text fx:id="txtUsername" strokeType="OUTSIDE" strokeWidth="0.0" text="Username :" wrappingWidth="378.1366882324219">
+            <Text fx:id="txtUsernameS" strokeType="OUTSIDE" strokeWidth="0.0" text="Username :" wrappingWidth="378.1366882324219">
                <font>
                   <Font size="18.0" />
                </font>
@@ -36,6 +36,6 @@
          </children>
       </VBox>
       <Button fx:id="btnIndietro" layoutX="30.0" layoutY="338.0" mnemonicParsing="false" onAction="#handleIndietro" prefHeight="25.0" prefWidth="129.0" text="Indietro" />
-      <Button fx:id="btnElimina" layoutX="412.0" layoutY="338.0" mnemonicParsing="false" onAction="#deleteProfile" prefHeight="25.0" prefWidth="129.0" text="Elimina Profilo" />
+      <Button fx:id="btnElimina" layoutX="412.0" layoutY="338.0" mnemonicParsing="false" onAction="#deleteProfileS" prefHeight="25.0" prefWidth="129.0" text="Elimina Profilo" />
    </children>
 </AnchorPane>
